# inf2004-team34-car

./: README.md
IR sensor/: ir_sensor.c
driver/Barcode + Wifi/: Barcode+Wifi.c
driver/IR sensor/: IR Barcode.c  IR Line Tracking.c
driver/magnometer/: magnometer.c
driver/motor/: motor.c
driver/ultrasonic/: ultrasonic.c
driver/wheel encoder/: wheel_encoder_standalone.c
driver/wifi/: CMakeLists.txt  cgi.h  htmldata.c  main.c  ssi.h
driver/wifi/html_files/: index.shtml
magnometer/: magnometer.c
partial integration/: CMakeLists.txt  car.c  htmldata.c  lwipopts.h
partial integration/html_files/html_files/: index.shtml
